--- a/_index.html
+++ b/_index.html
@@ -482,7 +482,7 @@ http://people.opera.com/tiffanyb/wkresearch/transforms.html
 
 <p>Each of these functions accepts a CSS angle as an argument. Valid values may be degrees (ex: <code>45deg</code>), radians (ex: <code>.21rad</code>), gradians (ex: <code>100grad</code>), or turns (<code>.25turn</code>). Units are defined in the <a href="http://www.w3.org/TR/css3-values/#angles">angles section</a> of the CSS Values and Units Module Level 3 specification.</p>
 
-<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters. The first three values must be numbers. They form an [x,y,z] direction vector. The fourth parameter determines the angle of rotation in each direction specified by the vector. Again: angles may be degrees, radians, grandians, or turns.</p>
+<p><code>rotate3d()</code> is a bit more complicated. It accepts four parameters. The first three values must be numbers, either positive or negative. They form an [x,y,z] direction vector. The fourth parameter determines the angle of rotation in each direction specified by the vector. Again: angles may be degrees, radians, grandians, or turns.</p>
 
 <figure id="rotate3d">
 <img src="3d-transforms-rotate3d.png">
@@ -493,7 +493,7 @@ http://people.opera.com/tiffanyb/wkresearch/transforms.html
 
 <p>When the x, y, and z values are the same &#8212; say <code>rotate3d(22,22,22,45deg)</code>  &#8212; the effect is about what you'd get if each value were 1 (<code>rotate3d(1,1,1,45deg)</code>). It has to do with the way the <a href="http://www.w3.org/TR/css3-transforms/#Rotate3dDefined"><code>rotate3d</code> matrix</a>, is calculated. Plug in the same values for x, y, and z, and it results in virtually the same matrix, give or take a decimal place.</p>
 
-<p>Should you change one (or two) of those values, however, it results in a different matrix. For example, <code>rotate3d(1,100,1,45deg)</code> rotates the object more severely around the y axis than around either the x or z axes. By <a href="3d-transforms-rotate3d.html">manipulating</a> each value, you can get a sense of how they interplay.
+<p>Should you change one (or two) of those values, however, it results in a different matrix. For example, <code>rotate3d(1,100,1,45deg)</code> rotates the object more severely around the y axis than around either the x or z axes. By <a href="3d-transforms-rotate3d.html">manipulating</a> each value, you can get a sense of how they interplay.</p>
 
 
 
