Consolidating everything into one script.

--- a/3d-transforms-rotate3d.html
+++ b/3d-transforms-rotate3d.html
@@ -62,40 +62,46 @@
 <script>
 var form = document.forms[0];
 
-form.addEventListener('reset', function(e){
-	var css = document.styleSheets[1],
-	    current = css.cssRules[0].cssText.split(':'),
-	    newrule = current[0] + ": rotate3d(0, 0, 0, 0deg); }";
-	    
-	css.insertRule(newrule,0); // Insert at the top of the rule stack.
-	css.deleteRule(1);         // Delete what is now the second rule.
-	
-} ,false);
 
-form.addEventListener('submit', function(e){
-	
+
+var updatecss = function(e){
 	e.preventDefault();
 	
 	var css = document.styleSheets[1],  // using the embedded style sheet.
-		inp = document.querySelectorAll('input'),
-		current = css.cssRules[0].cssText.split(':'),
-		val = [],
-		rotate3d = ': rotate3d(',
-		newrule = '';
-		
+			inp = document.querySelectorAll('input'),
+			current = css.cssRules[0].cssText.split(':'),
+			val = [],
+			rotate3d = ': rotate3d(',
+			newrule = current[0];
+	
+	if(e.type == 'reset'){
+	
+		newrule += rotate3d; 
+		newrule += '0, 0, 0, 0deg); }';
+	
+	} else {
+	
 		// build new values
 		val[0] = +(inp[0].value);
 		val[1] = +(inp[1].value);
 		val[2] = +(inp[2].value);
 		val[3] = inp[3].value;
 		
-		newrule = current[0];
 		newrule += rotate3d += val.join(',') + ');}';
+	}
+	
+	console.log( newrule );
 		
-		css.insertRule(newrule,0); // Insert at the top of the rule stack.
-		css.deleteRule(1);         // Delete what is now the second rule.
+	css.insertRule(newrule,0); // Insert at the top of the rule stack.
+	css.deleteRule(1);         // Delete what is now the second rule.
+	
+}
 
-},false)
+form.addEventListener('reset',updatecss,false);
+
+form.addEventListener('change',updatecss,false);
+
+form.addEventListener('submit',updatecss,false)
 </script>
 
 
