Moving page-specific CSS to the page and out of global style sheet.

--- a/3d-transforms-card.html
+++ b/3d-transforms-card.html
@@ -4,9 +4,11 @@
 	<meta charset="utf-8">
 	<title>3D Transforms: A playing card</title>
 	<link rel="stylesheet" href="3d-transforms.css" type="text/css">
+	<link rel="stylesheet" href="3d-transforms-card.css" type="text/css">
 </head>
 <body id="twosided">
 
+<div class="note">CAN PROBABLY DELETE THIS</div>
 <h1>Transforming &#8220;two-sided&#8221; objects</h1>
 
 <p>Click a card to flip it. Note that there is a long transition &#8212; 5 seconds &#8212; so that it is easier to see how perspective affects the perception of depth.</p>
