--- a/3d-transforms-perspective-change.html
+++ b/3d-transforms-perspective-change.html
@@ -26,7 +26,7 @@
         font-family: monospace;
     }
     .facet, .plane{
-		-webkit-transform: rotate3d(-10,0,0,-60deg);
+		-webkit-transform: rotate3d(-10,0,0,-45deg);
 		   -moz-transform: rotate3d(-10,0,0,-45deg);
 			-ms-transform: rotate3d(-10,0,0,-45deg);
 				transform: rotate3d(-10,0,0,-45deg);
@@ -42,7 +42,8 @@
 
     <form id="persprange">
         <p><label for="perspective">perspective:</label> 
-        <input type="range" id="perspective" value="500" min="1" max="1500"><span id="startval" data-start="500"></span>px</p>
+        <input type="range" id="perspective" value="500" min="1" max="1500" required>
+        <span id="startval" data-start="500"></span>px</p>
         <p><button type="reset">Reset</button></p>
     </form>
 
@@ -58,7 +59,12 @@
 (function(){
 	var f = document.forms[0], 
 		css = document.styleSheets[1]; // grabs internal style sheet
-	f.addEventListener('submit',function(e){ e.preventDefault(); },false);
+	
+	f.addEventListener('submit',function(e){ 
+		e.preventDefault(); 
+		
+	},false);
+	
 	f.addEventListener('reset',function(e){ 
 		var startval = document.getElementById('startval'), 
 			val = startval.getAttribute('data-start'),
@@ -68,22 +74,34 @@
 	 
 		startval.innerHTML = val;
 		css.insertRule(newrule,0);
-		css.deleteRule(1); 
+		css.deleteRule(1);
+		
+		removeError(); 
 
 	},false);
+	
 	f.addEventListener('change', function(e){
 		e.preventDefault();
+	
 		var c = css, 
 			persp = c.cssRules[0].cssText.split(':'), // grabs first rule in that sheet & splits it.
 			perspective = f['perspective'].value, // grabs the range
 			newrule = persp[0],
 			startval = document.getElementById('startval');
+	
+		// Remove the error message if there is one.
+		removeError();
+		
+		if( perspective <= 0 ){
+			showError();
+			return;
+		}
 		
 		persp[1] = ': ';
 		persp[2] = perspective;
 		persp[3] = 'px; }';
 		
-		newrule = persp.join('')
+		newrule = persp.join('');
 		
 		startval.innerHTML = +(perspective);
 	
@@ -92,6 +110,27 @@
 
 	}, false);
 
+	/*
+	   For browsers that don't support range, 
+	   and run the risk of a zero value input. 
+	*/
+	function removeError(){
+		var err = document.getElementById('error');
+		if( err ){
+			err.parentNode.removeChild(err);
+		}
+	}
+	
+	function showError(){
+		var msg = document.createTextNode('Value must be greater than zero.'),
+		err = document.createElement('p');
+			
+		err.id = 'error';
+		err.appendChild(msg);
+				
+		f.appendChild(err);
+	}
+	
 	window.addEventListener('DOMContentLoaded', function(e){
 		var startval = document.getElementById('startval');
 		startval.innerHTML = startval.getAttribute('data-start');
