--- a/3d-transforms-rotateXYZ.html
+++ b/3d-transforms-rotateXYZ.html
@@ -9,7 +9,6 @@
 		-webkit-animation-duration: 10s;
 		   -moz-animation-duration: 10s;
 		    -ms-animation-duration: 10s;
-
 		    
 		-webkit-animation-iteration-count: infinite;
 		   -moz-animation-iteration-count: infinite;
@@ -122,6 +121,9 @@
    		 	-ms-transform: rotateZ(359deg);
   		}		
 	}
+	
+	#rxyz p{ display:inline-block; white-space: nowrap;}
+
 	</style>
 </head>
 <body id="rotate">
