Fixing a grammar issue.

--- a/3d-transforms-rotate3d.html
+++ b/3d-transforms-rotate3d.html
@@ -9,8 +9,7 @@
 		-webkit-transform: rotate3d(0, 0, 0, 0deg);
 		   -moz-transform: rotate3d(0, 0, 0, 0deg); 
 		    -ms-transform: rotate3d(0, 0, 0, 0deg); 
-		        transform: rotate3d(0, 0, 0, 0deg); 
-		
+		        transform: rotate3d(0, 0, 0, 0deg); 		
 	}	
 	
 	header,form{
@@ -25,7 +24,7 @@
 <body>
 <header>
         <h1>3D CSS Transforms: <code>rotate3d()</code></h1>
-        <p>Adjust the value below to understand the effect of <code id="r3d">rotate3d()</code>.</p>
+        <p>Adjust the values below to understand the effect of <code id="r3d">rotate3d()</code>.</p>
     </header>
     
    <form id="rotate3" action="#">
