Removing update button and adding escape script to rotate3d demo. Adding escape script to scale3d demo as well.

--- a/3d-transforms-scale3d.html
+++ b/3d-transforms-scale3d.html
@@ -106,7 +106,7 @@
 		</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms-resetonescape.js"></script>
+<script type="application/javascript" src="3d-transforms-escreset.js"></script>
 
 <script type="application/javascript">
 (function(){
