--- a/3d-transforms-rotate3d.html
+++ b/3d-transforms-rotate3d.html
@@ -45,9 +45,9 @@
     	
     	<p>
     	<label for="angle">angle</label>
-    	<input type="text" id="angle" name="angle" value="0deg" required">
+    	<input type="text" id="angle" name="angle" value="0deg" required>
     	</p>
-    	<p><button type="submit">Update</button> <button type="reset">Reset</button></p>
+    	<p><button type="reset">Reset</button></p>
     	<br style="clear:both;">
     </form> 
 
@@ -57,8 +57,7 @@
         <div class="plane">3</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms.js"></script>
-
+<script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script>
 (function(){
 	var form = document.forms[0];
@@ -74,7 +73,7 @@
 				newrule = current[0];
 	
 		if(e.type == 'reset'){
-	
+			
 			newrule += rotate3d; 
 			newrule += '0, 0, 0, 0deg); }';
 	
