--- a/3d-transforms-transZ.html
+++ b/3d-transforms-transZ.html
@@ -31,7 +31,7 @@
         <div class="facet">3</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms.js"></script>
+<script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script>
 var form = document.forms[0];
 
