--- a/3d-transforms-perspective-change.html
+++ b/3d-transforms-perspective-change.html
@@ -53,8 +53,7 @@
         <div class="facet">3</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms.js"></script>
-
+<script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script type="application/javascript">
 (function(){
 	var f = document.forms[0], 
