--- a/3d-transforms-transform-style.html
+++ b/3d-transforms-transform-style.html
@@ -27,9 +27,7 @@
     </div>
 </div>
 
-
-
-<script type="application/javascript" src="3d-transforms.js"></script>
+<script type="application/javascript" src="3d-transforms-flip.js"></script>
 
 </body>
 </html>
