Making sure classList polyfill is everywhere it needs to be.

--- a/3d-transforms-rotateXYZ.html
+++ b/3d-transforms-rotateXYZ.html
@@ -146,6 +146,7 @@
     </div>
 
 	<script type="application/javascript" src="3d-pagevis.js"></script>
+	<script type="application/javascript" src="3d-transforms-pf.js"></script>
 	<script type="application/javascript">
 	(function(){
 		var rxyz = document.getElementById('rxyz');
