--- a/3d-transforms-containing.html
+++ b/3d-transforms-containing.html
@@ -51,7 +51,20 @@
         <div class="facet">3</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms.js"></script>
+<script type="application/javascript" src="3d-transforms-pf.js"></script>
+<script type="application/javascript">
+(function(){
+	var toggle = document.getElementById('toggle');
+	if( toggle ){
+		toggle.addEventListener('change', function(e){
+			e.preventDefault();
+			var stage = document.getElementById('stage');
+			// consider adding support for non classList browsers
+			e.target.checked ? stage.classList.add('perspective') : stage.classList.remove('perspective');
+		}, false);
+	}
+})();
+</script>
 
 </body>
 </html>
