Adding a .5 step to the demo.

--- a/3d-transforms-scale3d.html
+++ b/3d-transforms-scale3d.html
@@ -99,17 +99,17 @@
  <form action="#">
     	<p>
     	<label for="x">x</label>
-    	<input type="number" id="x" name="x" value="1">
+    	<input type="number" id="x" name="x" value="1" step=".5">
     	</p>
     	
     	<p>
     	<label for="y">y</label>
-    	<input type="number" id="y" name="y" value="1">
+    	<input type="number" id="y" name="y" value="1" step=".5">
     	</p>
     	
     	<p>
     	<label for="z">z</label>
-    	<input type="number" id="z" name="z" value="1">
+    	<input type="number" id="z" name="z" value="1" step=".5">
     	</p>
 
     	<p><button type="submit">Update</button> <button type="reset">Reset</button></p>
