--- a/_index.html
+++ b/_index.html
@@ -255,7 +255,16 @@ http://people.opera.com/tiffanyb/wkresearch/transforms.html
 
 <p>When our drawing surface is a document viewport, the x-axis is horizontal, the y-axis is vertical, and the z-axis sits perpendicular to the screen. This is known as the <em>global</em> coordinate system and (0,0,0) is the top-left corner of the viewport. When we apply a transform to an object using the <code>transform</code> property, we also a create <strong>local coordinate system</strong> for the object. Within this local coordinate system, the origin lies at the <em>center of the object</em> by default (50%, 50%) and the screen plane is the z plane. We'll return to these concepts throughout this article.</p>  
 
-<p>Before we get into the nitty-gritty of transforms, there are a couple of things you should be aware of. Firstly, transforms are cumulative: children inherit and are affected by the transforms applied to their parents. Secondly, transformed objects aren't always rendered on screen. In some cases, this is because the transform has caused the coordinates of the object to be outside of the viewport. With transforms along the z-axis, for example, this could mean the the coordinates are "behind" the user. In other cases, a transform isn't applied because the cumulative transform matrix is <em><a href="http://en.wikipedia.org/wiki/Invertible_matrix">non-invertible</a></em> &#8212; in non-nerdy terms, the math just doesn't work out.</p> 
+<p>Before we get into the nitty-gritty of transforms, there are a couple of things you should be aware of.</p>
+
+<ul>
+	<li>Transforms are cumulative.</li>
+	<li>A transformed object may not be rendered on screen.</li>
+</ul>
+	
+<p>"Cumulative" means that children inherit and are affected by the transforms applied to their parents. Similarly, a list of transform functions is the same as a nested set of transforms. In other words, <code>&lt;div style="transform: rotateY(45deg) scaleZ(3)"&gt;</code> is the equivalent of a pair of nested <code>div</code> elements, with a rotation transform applied to the parent, and a scaling one applied to the child.</p>  
+
+<p>Transforms may not be rendered for a couple of reasons. Usually it's because the transform applied has caused the coordinates of the object to be exist of the viewport. With transforms along the z-axis, for example, this could mean the the coordinates are "behind" the user. In other cases, a transform isn't applied because the cumulative transform matrix is <em><a href="http://en.wikipedia.org/wiki/Invertible_matrix">non-invertible</a></em> &#8212; in non-nerdy terms, the math just doesn't work out.</p> 
 
 <h3 id="perspectiveprop">The <code>perspective</code> property</h3>
 
@@ -481,14 +490,16 @@ http://people.opera.com/tiffanyb/wkresearch/transforms.html
 
 <p>When the browser applies a transform matrix, it multiplies the matrix by the coordinate vector for each of the object's vertices (corners). The product of this operation are the object's transformed coordinates.</p>
 
-<p>Let's say we have a point at (100, 200, 1). We want to scale it along the z-axis by a factor of 3 &#8212; <code>transform: scale3d(1, 1, 3)</code>. That means we need to multiply our coordinate vector by our scaling matrix.
+<p>Let's say we have a point at (100, 200, 1). We want to scale it along the z-axis by a factor of 3 &#8212; <code>transform: scale3d(1, 1, 3)</code>. That means we need to multiply our coordinate vector by our scaling matrix.</p>
 
 <figure id="scale3dvectorproduct">
 	<img src="3d-transforms-scale3d2.png" alt="Vector product: 100, 200, 3, 1">
 	<figcaption>Multiplying our <code>scaling3d()</code> matrix by a coordinate vector produces coordinates of (100, 200, 3).</figcaption> 
 </figure>
 
-<p>As you can see, our z coordinate is now 3 &#8212; that is, our object is being rendered three units closer to us.
+<p>As you can see, our z coordinate is now 3 &#8212; that is, our object is being rendered three pixels closer to us, but that's generally imperceptible.
+
+
 </div>
 
 <p>As with two-dimensional scaling, positive numbers > 1 increase depth. Positive numbers that are greater than zero, but less than 1 will decrease the width, height, or depth. Negative numbers cause the object to appear flipped or further away. Precisely how it's rendered will depends on which other transforms have been applied to the object and its ancestors.</p>
