--- a/3d-transforms-scale3d.html
+++ b/3d-transforms-scale3d.html
@@ -5,24 +5,23 @@
 	<title>3D CSS Transforms: scale3d()</title>
 	<link rel="stylesheet" href="3d-transforms.css" type="text/css">
 	<style type="text/css">
-	#stage{
-	background: rgba(200,200,200,.8);
-    -webkit-perspective: 300px;
-       -moz-perspective: 300px;
-        -ms-perspective: 300px;
-            perspective: 300px;
+	#stage{	
+		-webkit-perspective: 300px;
+		   -moz-perspective: 300px;
+			-ms-perspective: 300px;
+				perspective: 300px;
  
- 	/* 
- 	  Safari 6.0.2 renders this differently than Chromium-descended 
- 	  WebKits currently do. Using 'flat' brings the differences in line,
- 	  but undoes the true 3D effect you get with Safari.
- 	  [-TBB 2013.02.12]
- 	 */
+		/* 
+		  Safari 6.0.2 renders this differently than Chromium-descended 
+		  WebKits currently do. Using 'flat' brings the differences in line,
+		  but undoes the true 3D effect you get with Safari.
+		  [-TBB 2013.02.12]
+		 */
  	
-    -webkit-transform-style: preserve-3d;
-	   -moz-transform-style: preserve-3d;
-		-ms-transform-style: preserve-3d;
-			transform-style: preserve-3d;
+		-webkit-transform-style: preserve-3d;
+		   -moz-transform-style: preserve-3d;
+			-ms-transform-style: preserve-3d;
+				transform-style: preserve-3d;
  	}
  	
  	#wrap{
@@ -93,7 +92,7 @@
 <body>
 	 <header>
         <h1>3D CSS Transforms: <code>scale3d()</code></h1>
-        <p>Adjust the values below to understand the effect of <code id="r3d">scale3d()</code>.The objects below have been rotated 45 degrees along the Y axis.</p>
+        <p>Adjust the values below to understand the effect of <code id="r3d">scale3d()</code>. The objects below have been rotated 45 degrees along the Y axis. (You can also press the <kbd>Esc</kbd> key to reset the form.) </p>
     </header>
     
  <form action="#">
@@ -112,7 +111,7 @@
     	<input type="number" id="z" name="z" value="1" step=".5">
     	</p>
 
-    	<p><button type="submit">Update</button> <button type="reset">Reset</button></p>
+    	<p><button type="reset">Reset</button></p>
     	<br style="clear:both;">
     </form> 
 
